--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <span class="x-player">Player</span>
         </div>
         <div class="game-board">
-            <div class="grid-cell" id="cell1"></div>
-            <div class="grid-cell" id="cell2"></div>
-            <div class="grid-cell" id="cell3"></div>
-            <div class="grid-cell" id="cell4"></div>
-            <div class="grid-cell" id="cell5"></div>
-            <div class="grid-cell" id="cell6"></div>
-            <div class="grid-cell" id="cell7"></div>
-            <div class="grid-cell" id="cell8"></div>
-            <div class="grid-cell" id="cell9"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
+            <div class="grid-cell"></div>
         </div>
         <div class="player-container">
             <span class="o-symbol">O</span>
@@ -34,6 +34,7 @@
         </div>
         <div class="btn-group">
             <button id="btn-reset">Reset</button>
+            <button id="btn-continue">Continue</button>
         </div>
     </div>
     <script src="script.js"></script>
