--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <span class="x-player">Player</span>
         </div>
         <div class="game-board">
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
+            <div class="grid-cell" id="0"></div>
+            <div class="grid-cell" id="1"></div>
+            <div class="grid-cell" id="2"></div>
+            <div class="grid-cell" id="3"></div>
+            <div class="grid-cell" id="4"></div>
+            <div class="grid-cell" id="5"></div>
+            <div class="grid-cell" id="6"></div>
+            <div class="grid-cell" id="7"></div>
+            <div class="grid-cell" id="8"></div>
         </div>
         <div class="player-container">
             <span class="o-symbol">O</span>
