--- a/index.html
+++ b/index.html
@@ -8,13 +8,35 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper select mode-page">
         <h1>Tic Tac Toe</h1>
-        <p id="announcement">Player X's Turn</p>
-        <div class="player-container">
-            <span class="score-board" id="x-score">0</span>
-            <span class="x-symbol">X</span>
-            <span class="x-player">Player</span>
+        <div>
+            <div onclick="selectMode(1)">1 Player</div>
+            <div onclick="selectMode(2)">2 Players</div>
+        </div>
+    </div>
+    <div class="wrapper select symbol-page">
+        <h1>Tic Tac Toe</h1>
+        <div>
+            <div onclick="selectSymbol('X')">X</div>
+            <div onclick="selectSymbol('O')">O</div>
+        </div>
+    </div>
+    <div class="wrapper game-page">
+        <h1>Tic Tac Toe</h1>
+        <div class="score-board">
+            <div class="x score">
+                <span class="symbol">X</span>
+                <span><span id="x-score-value">0</span>&nbsp;<span>wins</span></span>
+            </div>
+            <div class="o score">
+                <span class="symbol">O</span>
+                <span><span id="o-score-value">0</span>&nbsp;<span>wins</span></span>
+            </div>
+            <div class="draw score">
+                <span class="symbol">TIE</span>
+                <span><span id="draw-score-value">0</span>&nbsp;<span>draws</span></span>
+            </div>
         </div>
         <div class="game-board">
             <div class="grid-cell" id="0"></div>
@@ -27,14 +49,13 @@
             <div class="grid-cell" id="7"></div>
             <div class="grid-cell" id="8"></div>
         </div>
-        <div class="player-container">
-            <span class="o-symbol">O</span>
-            <span class="o-player">Player</span>
-            <span class="score-board" id="o-score">0</span>
-        </div>
+    </div>
+    <div class="wrapper gameOver">
+        <h1 id="announcement">Player 1 Wins</h1>
         <div class="btn-group">
-            <button id="btn-reset">Reset</button>
             <button id="btn-continue">Continue</button>
+            <button id="btn-reset">Reset</button>
+            <button id="btn-home">Home</button>
         </div>
     </div>
     <script src="script.js"></script>
